# nsclcrecurrence

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  README.md  environment.yml  pyproject.toml  requirements.yml
ct_lung_class/: annotations.csv  annots_forpy.csv  constants.py  create_flipbook.py  create_zara_dataset.ipynb  data.py  datasets.py  datatsets_peter.py  ddp.py  dino.ipynb  dino_classifier.py  dsets_hist.py  exclude_michelle.csv  exclude_prasad.py  experiment.ipynb  fixed_size.ipynb  grid_search_augmentation.py  grid_search_params.py  image.py  luna_model.py  main.py  medmnist_model.py  model.py  nrrd_to_nfti.ipynb  nrrd_to_nifti.py  parser.py  pl_datamodule.py  pl_grid_search.py  pl_kfold_cv.py  pl_main.py  pl_run.sh  pl_train.py  plot_loss.py  plot_metrics.py  pretrained.py  qa.py  roc_analysis.ipynb  roc_dilate.ipynb  roc_finalmodel.ipynb  roc_holdout.ipynb  (+14 more)
ct_lung_class/conf/: __init__.py  config.yml
ct_lung_class/experiments/: experiment.ipynb  label_annotations.ipynb  scratch.ipynb
ct_lung_class/grid_search/: grid_search_augmentation.py  grid_search_params.py
ct_lung_class/pretrained/: __init__.py  luna_model.py  medicalnet.py
ct_lung_class/tests/: test_data.py
ct_lung_class/util/: create_flipbook.py  disk.py  logconf.py  nrrd_to_nifti.py  rename_sclc_dataset.py  util.py
tests/: test_data.py
